@@ -93,6 +93,8 @@ namespace Orthanc
 
     void SetHttpHeader(const void* parameters);
 
+    void BufferCompression(const void* parameters);
+
   public:
     OrthancPlugins();
 
