@@ -5,6 +5,11 @@ Pending changes in the mainline
 * Support of "deflate" and "gzip" content-types in HTTP requests
 * Options to validate peers against CA certificates in HTTPS requests
 
+Plugins
+-------
+
+* New function OrthancPluginBufferCompression() to (un)compress memory buffers
+
 Maintenance
 -----------
 
